--- a/Proyecto Final/pages/contact.html
+++ b/Proyecto Final/pages/contact.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- SEO -->
+
+    <meta name="description" content="Casas de montaña. Un lugar donde la naturaleza y la paz se encuentran.">
+    <meta name="keywords"  content="Cabañas, VGB, Villa General Belgrano, Alojamiento, Hotel, Cabaña, Córdoba, Montañas, Cerros, Oktoberfest, Fiesta de la cerveza">
+
     <!-- Google Font Begin-->
 
 
@@ -27,11 +32,10 @@
 
     <!-- Agregar el CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<!-- 
-    <link rel="stylesheet" href="../css/estilos.css">
--->
 
-<link rel="stylesheet" href="../css//styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
+
+    <link rel="stylesheet" href="../css/styles-whatsapp.css">
 
     <title>Fincas del Faldeo | Contacto</title>
 </head>
@@ -220,7 +224,11 @@
 
         </div>
 
-
+        <!------- whatsapp ---------->  
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+        <a href="https://api.whatsapp.com/send?phone=+5491135986771&text=Hola%21%20quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20las%20Fincas%20del%20Faldeo." class="float" target="_blank">
+        <i class="fa fa-whatsapp my-float"></i>
+        </a>
   
       </main>
       <!------- MAIN END---------->
