--- a/Proyecto Final/pages/place.html
+++ b/Proyecto Final/pages/place.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- SEO -->
+
+    <meta name="description" content="Casas de montaña. Un lugar donde la naturaleza y la paz se encuentran.">
+    <meta name="keywords"  content="Cabañas, VGB, Villa General Belgrano, Alojamiento, Hotel, Cabaña, Córdoba, Montañas, Cerros, Oktoberfest, Fiesta de la cerveza">
+
     <!-- Google Font Begin-->
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -26,15 +31,15 @@
 
     <!-- Agregar el CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<!-- 
-    <link rel="stylesheet" href="../css/estilos.css">
--->
 
-<link rel="stylesheet" href="../css//styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
+
+    <link rel="stylesheet" href="../css/styles-whatsapp.css">
 
     <title>Fincas del Faldeo | El Lugar</title>
 </head>
 <body>
+
 
 
       <!------- HEADER BEGIND---------->
@@ -83,6 +88,7 @@
 
     <!------- MAIN BEGIND---------->
     <main class="container">
+
       <div class="row">
         <br>
       </div>
@@ -139,6 +145,7 @@
           <br>
         </div>
         <div class="col-12 pt-30 ml-10 mr-10">
+           <!--
             <p class="place-description font-zen-kurenaido size-20">
                 Villa General Belgrano es una localidad situada en el departamento de Calamuchita, en la provincia de Córdoba, Argentina; a 90 km al sur de la capital provincial. Está ubicada en el Valle de Calamuchita, rodeada de sierras, 9 km al norte de Santa Rosa de Calamuchita, y a 35 km también al norte de la ciudad de Embalse.
 
@@ -146,8 +153,20 @@
                 
                 Su entorno es serrano rodeado de bosques (coníferas, hayas, robles etc) con abundantes arroyos. Se accede a la población por la Ruta Provincial 5.
             </p>
+            -->
+            <p class="place-description font-zen-kurenaido size-20">
+              Villa General Belgrano es una localidad especial, con una interesante historia y amplia oferta cultural, arte, muy buena gastronomía,  paisajes increíbles, y variada oferta hotelera de categoría. Situada en el centro de la  República Argentina, en el departamento de Calamuchita, provincia de Cordoba, a solo 88km al sur de la capital provincial y a 750km de la Capital Federal, enmarcada por los cordones de las Sierras Grandes al oeste; de las Sierras Chicas al este y los Embalses de Los Molinos y de Río Tercero, al norte y sur respectivamente. A solo 9km de la ciudad de Santa Rosa, y a 35km de la ciudad de Embalse. 
+              Se trata de un pueblo estilo centroeuropeo, con arquitectura típicamente bávara, esto último debido a sus primeros pobladores, inmigrantes de origen preferentemente alemán; le siguieron otros grupos europeos como suizos, italianos, austriacos, que fueron forjando la identidad, la arquitectura y la tradición en el lugar. 
+              Por su privilegiada ubicación, Villa General Belgrano tiene conexión con todo el país, tanto vía aérea, con vuelos diarios al aeropuerto internacional Pajas Blancas, como terrestre con servicios con frecuencia diaria todo el año. Se accede a la población por la Ruta Provincial N°5 donde se encuentra su entrada principal.
+            </p>
         </div>
       </div>
+
+      <!------- whatsapp ---------->  
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+      <a href="https://api.whatsapp.com/send?phone=+5491135986771&text=Hola%21%20quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20las%20Fincas%20del%20Faldeo." class="float" target="_blank">
+      <i class="fa fa-whatsapp my-float"></i>
+      </a>
 
     </main>
     <!------- MAIN END---------->
